# esoteric

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LOOP.md  PLAN.md  README.md  REQUIREMENTS.md  TECHNINAL_SPEC_BACKEND.md  UI.md  docker-compose.yml  journal.txt  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  diesel.toml  docker-compose.dev.yml  docker-compose.yml
backend/crates/admin/: Cargo.toml
backend/crates/admin/src/: lib.rs
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: db_models.rs  integration_tests.rs  jwt.rs  lib.rs  models.rs  pkce.rs  tests.rs
backend/crates/auth/src/handlers/: authorize.rs  jwks.rs  mod.rs  revoke.rs  token.rs
backend/crates/bookings/: Cargo.toml
backend/crates/bookings/src/: db.rs  error.rs  handlers.rs  lib.rs  models.rs
backend/crates/common/: Cargo.toml
backend/crates/common/src/: lib.rs
backend/crates/common/src/cache/: mock.rs  mod.rs  valkey.rs
backend/crates/db/: Cargo.toml
backend/crates/db/src/: schema.rs
backend/crates/notifications/: Cargo.toml
backend/crates/notifications/src/: email.rs  fcm.rs  handlers.rs  lib.rs  models.rs
backend/crates/payments/: Cargo.toml
backend/crates/payments/src/: db.rs  error.rs  handlers.rs  lib.rs  models.rs
backend/crates/payments/src/providers/: mod.rs
backend/crates/providers/: Cargo.toml
backend/crates/providers/src/: db.rs  error.rs  handlers.rs  lib.rs  models.rs
backend/crates/services/: Cargo.toml
backend/crates/services/src/: db.rs  error.rs  handlers.rs  lib.rs  models.rs
backend/crates/users/: Cargo.toml
backend/crates/users/src/: db.rs  error.rs  handlers.rs  lib.rs  models.rs
backend/migrations/: 0001_create_users_services.sql  0004_create_bookings_table.sql  0005_create_payments_table.sql  0006_create_notifications_tables.sql
backend/migrations/2026-03-05-231226-0000_create_users_services/: up.sql
backend/migrations/2026-03-05-231231-0000_create_oauth_tables/: down.sql  up.sql
backend/migrations/2026-03-05-231231-0001_create_providers_table/: down.sql  up.sql
backend/migrations/2026-03-05-231231-0002_create_services_table/: up.sql
backend/migrations/2026-03-05-231231-0003_create_bookings_table/: up.sql
backend/migrations/2026-03-05-231231-0004_create_payments_table/: up.sql
backend/migrations/2026-03-05-231231-0005_create_notifications_tables/: down.sql
mobile/: .gitignore  Dockerfile  Makefile  README.md  babel.config.js  biome.json  docker-compose.dev.yml  package-lock.json  package.json  pnpm-lock.yaml  tamagui.config.ts
mobile/.tamagui/: tamagui.config.json
mobile/app/: _layout.tsx  onboarding.tsx
mobile/app/(auth)/: login.tsx  register.tsx
mobile/app/(tabs)/: _layout.tsx  bookings.tsx  explore.tsx  index.tsx  profile.tsx  provider-dashboard.tsx  services.tsx
mobile/app/booking/: confirmation.tsx  new.tsx
mobile/app/provider/: [id].tsx
mobile/app/service/: [id].tsx
mobile/components/: animations.tsx  cards.tsx  design-system.ts  error-boundary.tsx  floating-nav.tsx  skeleton.tsx  sparkle-effect.tsx  stardust-background.tsx  ui.tsx
mobile/contexts/: auth-context.tsx
mobile/lib/: api-client.ts
mobile/ui-reference/app/: globals.css  layout.tsx  page.tsx
mobile/ui-reference/components/: cosmic-header.tsx  daily-insight.tsx  floating-nav.tsx  glass-card.tsx  mystical-button.tsx  provider-card.tsx  sparkle-effect.tsx  stardust-background.tsx  tarot-card.tsx  zodiac-badge.tsx
