[workspace]
members = [
    "crates/*"
]

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "cors"] }
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
common = { path = "crates/common" }
db = { path = "crates/db" }
auth = { path = "crates/auth" }
users = { path = "crates/users" }
providers = { path = "crates/providers" }
services = { path = "crates/services" }
bookings = { path = "crates/bookings" }
payments = { path = "crates/payments" }
notifications = { path = "crates/notifications" }
admin = { path = "crates/admin" }
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8"
dotenv = "0.15"
