[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
db = { path = "../db" }
axum = "0.8"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }
pkce = "0.2"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
ulid = "1.2"
async-trait = "0.1"
diesel = { version = "2.2", features = ["postgres", "chrono", "uuid", "r2d2", "serde_json"] }
urlencoding = "2.1"
r2d2 = "0.8"
