[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
ulid = "1.2"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
redis = { version = "0.29", features = ["tokio-comp"] }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "time"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "test-util"] }
