[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
ulid = "1.2"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
redis = { version = "0.29", features = ["tokio-comp"] }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "time"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "test-util"] }
