[package]
name = "payments"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
db = { path = "../db" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
async-trait = "0.1"
ulid = "1.2"
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8"
log = "0.4"
chrono = "0.4"
