[package]
name = "users"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
db = { path = "../db" }
axum = "0.8"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
rand = "0.8"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2", features = ["postgres", "chrono", "r2d2", "serde_json"] }
r2d2 = "0.8"
async-trait = "0.1"
jsonwebtoken = "10.3"